@@ -1,4 +1,8 @@
-﻿drkns 22.12.2014 22:53:05 +0200 - build 4226
+﻿drkns 24.12.2014 22:53:03 +0200 - build 4227
+
+1. Продолжение #0002893 - добавлено повышение полномочий.
+
+drkns 22.12.2014 22:53:05 +0200 - build 4226
 
 1. 0002893: Не работает размонтирование iso, vhd, vhdx
 
